--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,11 +42,6 @@ Version: 1.0.0
     Template Default Fonts & Fonts Styles
  ---------------------------------------------- */
 body {
-/* --------------------------------------------
-هدو زيادة للزوم ---------------------------------------------- */
-  transform: scale(0.9);
-/* --------------------------------------------
-هدو زيادة للزوم ---------------------------------------------- */
   font-family: "Kanit", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -55,7 +50,7 @@ body {
   background-color: var(--body);
   text-transform: uppercase;
   padding: 0;
-  margin: 0;
+  margin: 1px;
   overflow-x: hidden;
 }
 @media (max-width: 575px) {
